--- a/client/src/views/components/Cards/cards.css
+++ b/client/src/views/components/Cards/cards.css
@@ -1,11 +1,11 @@
 /* cards.css */
 .cards-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Cartas de tamaño mínimo de 200px */
-  gap: 20px;
-  margin-top: 20px;
-  padding: 0 20px; /* Agrega margen a los lados para evitar que las cartas excedan el tamaño de pantalla */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+  gap: 30px;
+  padding: 0 20px;  
   box-sizing: border-box;
+  
 }
 
 .card-link {
@@ -17,7 +17,7 @@
 .card {
   background-color:  #261c428a;
   padding: 10px;
-  border-radius: 10px;
+ 
   color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
